--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         debitis omnis voluptate eligendi cumque, quia in, libero error autem perspiciatis sapiente et! Ipsa, aut nulla.
     </p>
     <img src="https://picsum.photos/id/13/650/300" />
-    <p>
+    <p id="visibility_element">
         Consequatur accusamus atque sed nam aut quibusdam minus delectus explicabo, molestiae consequuntur, laudantium veritatis
         porro eveniet et tenetur, fuga repellendus nisi animi vitae cupiditate pariatur odit! Iste odit nihil, perspiciatis
         itaque laudantium est delectus assumenda blanditiis exercitationem veritatis nobis aperiam quibusdam id doloribus
