--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         body {
             background-color: peru;
             padding: 15px;
+            max-width: 700px;
+            width: 100%;
         }
         p {
             font-size: 15px;
